--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ repositories {
 }
 
 group = "org.embulk"
-version = "0.1.0-SNAPSHOT"
+version = "0.1.0"
 description = "CSV utility for Embulk plugins."
 
 sourceCompatibility = 1.8
