--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,8 @@
 plugins {
     id "java"
-    id "java-library"
     id "maven-publish"
-    id "org.ajoberstar.grgit" version "4.1.1"
-    id "org.embulk.embulk-plugins" version "0.4.2" apply false
+    id "signing"
+    id "checkstyle"
 }
 
 repositories {
@@ -11,53 +10,178 @@ repositories {
 }
 
 group = "org.embulk"
-version = "0.10.37-SNAPSHOT"
+version = "0.2.0-SNAPSHOT"
+description = "CSV utility for Embulk plugins."
 
-task releaseCheck {
-    doFirst {
-        if (rootProject.version.endsWith("-SNAPSHOT")) {
-            throw new GradleException("Not for release. The version in build.gradle is SNAPSHOT: ${rootProject.version}")
-        }
-        def grgit = org.ajoberstar.grgit.Grgit.open(dir: "${rootProject.projectDir}")
-        if (!grgit.status().clean) {
-            throw new GradleException("Not for release. The working tree is dirty.")
-        }
-        def described = grgit.describe(commit: "HEAD").toString().trim()
-        if (described != "v${rootProject.version}") {
-            throw new GradleException("Not for release. git-describe returned a name different from the version in build.gradle: ${described} v.s. v${rootProject.version}")
-        }
-        if (described.contains("-")) {
-            // HEAD may not be tagged with annotation properly.
-            throw new GradleException("Not for release. git-describe returned a name with a hyphen: ${described}")
-        }
-        // TODO: Revisit if we would check the format of tag annotation.
-    }
-    doLast {
-        println "Ready. Run 'release' task."
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+
+configurations {
+    compileClasspath.resolutionStrategy.activateDependencyLocking()
+    runtimeClasspath.resolutionStrategy.activateDependencyLocking()
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked"
+    options.encoding = "UTF-8"
+}
+
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+
+dependencies {
+    compileOnly "org.embulk:embulk-api:0.10.33"
+    compileOnly "org.embulk:embulk-spi:0.10.33"
+
+    compile "com.fasterxml.jackson.core:jackson-annotations:2.6.7"
+    compile "com.fasterxml.jackson.core:jackson-core:2.6.7"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.6.7"
+    compile "org.embulk:embulk-util-config:0.3.1"
+    compile "org.embulk:embulk-util-file:0.1.3"
+    compile "org.embulk:embulk-util-json:0.1.1"
+    compile "org.embulk:embulk-util-text:0.1.1"
+    compile "org.embulk:embulk-util-timestamp:0.2.1"
+
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.embulk:embulk-api:0.10.33"
+    testImplementation "org.embulk:embulk-spi:0.10.33"
+    testImplementation "org.embulk:embulk-core:0.10.33"
+    testImplementation "org.embulk:embulk-deps:0.10.33"
+    testImplementation "org.embulk:embulk-junit4:0.10.33"
+}
+
+javadoc {
+    title = "${project.name} v${project.version}"
+    options {
+        locale = "en_US"
+        encoding = "UTF-8"
+        overview = "src/main/html/overview.html"
+        links "https://docs.oracle.com/javase/8/docs/api/"
     }
 }
 
-task release {
-    dependsOn "releaseCheck"
+jar {
+    from rootProject.file("LICENSE")
 }
 
-subprojects {
-    tasks.withType(Test) {
-        testLogging {
-            events "passed", "skipped", "failed", "standardOut", "standardError"
+sourcesJar {
+    from rootProject.file("LICENSE")
+}
 
-            exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
-            showCauses = true
-            showExceptions = true
-            showStackTraces = true
-            showStandardStreams = true
+javadocJar {
+    from rootProject.file("LICENSE")
+}
 
-            outputs.upToDateWhen { false }
+// It should not publish a `.module` file in Maven Central.
+// https://docs.gradle.org/current/userguide/publishing_gradle_module_metadata.html#sub:disabling-gmm-publication
+tasks.withType(GenerateModuleMetadata) {
+    enabled = false
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            groupId = project.group
+            artifactId = project.name
+
+            from components.java  // Must be "components.java". The dependency modification works only for it.
+            // javadocJar and sourcesJar are added by java.withJavadocJar() and java.withSourcesJar() above.
+            // See: https://docs.gradle.org/current/javadoc/org/gradle/api/plugins/JavaPluginExtension.html
+
+            pom {  // https://central.sonatype.org/pages/requirements.html
+                packaging "jar"
+
+                name = project.name
+                description = project.description
+                url = "https://www.embulk.org/"
+
+                licenses {
+                    license {
+                        // http://central.sonatype.org/pages/requirements.html#license-information
+                        name = "The Apache License, Version 2.0"
+                        url = "https://www.apache.org/licenses/LICENSE-2.0.txt"
+                    }
+                }
+
+                developers {
+                    developer {
+                        name = "Muga Nishizawa"
+                        email = "muga.nishizawa@gmail.com"
+                    }
+                    developer {
+                        name = "Sadayuki Furuhashi"
+                        email = "frsyuki@gmail.com"
+                    }
+                    developer {
+                        name = "Naotoshi Seo"
+                        email = "sonots@gmail.com"
+                    }
+                    developer {
+                        name = "Dai MIKURUBE"
+                        email = "dmikurube@treasure-data.com"
+                    }
+                }
+
+                scm {
+                    connection = "scm:git:git://github.com/embulk/embulk-util-csv.git"
+                    developerConnection = "scm:git:git@github.com:embulk/embulk-util-csv.git"
+                    url = "https://github.com/embulk/embulk-util-csv"
+                }
+            }
         }
     }
 
-    afterEvaluate { project ->
-        rootProject.check.dependsOn project.check
-        rootProject.release.dependsOn project.publishMavenPublicationToMavenCentralRepository
+    repositories {
+        maven {  // publishMavenPublicationToMavenCentralRepository
+            name = "mavenCentral"
+            if (project.version.endsWith("-SNAPSHOT")) {
+                url "https://oss.sonatype.org/content/repositories/snapshots"
+            } else {
+                url "https://oss.sonatype.org/service/local/staging/deploy/maven2"
+            }
+
+            credentials {
+                username = project.hasProperty("ossrhUsername") ? ossrhUsername : ""
+                password = project.hasProperty("ossrhPassword") ? ossrhPassword : ""
+            }
+        }
     }
+}
+
+signing {
+    sign publishing.publications.maven
+}
+
+tasks.withType(Test) {
+    maxHeapSize = "1536m"
+    forkEvery = 1  // test processes are forked by each test class (default is 0)
+
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+        exceptionFormat = org.gradle.api.tasks.testing.logging.TestExceptionFormat.FULL
+        showCauses = true
+        showExceptions = true
+        showStackTraces = true
+        showStandardStreams = true
+        outputs.upToDateWhen { false }
+    }
+}
+
+tasks.withType(Checkstyle) {
+    reports {
+        // Not to skip up-to-date checkstyles.
+        outputs.upToDateWhen { false }
+    }
+}
+
+checkstyle {
+    toolVersion "8.7"
+    configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
+    configProperties = [
+        "checkstyle.config.path": file("${projectDir}/config/checkstyle")
+    ]
+    ignoreFailures = false
+    maxWarnings = 0  // https://github.com/gradle/gradle/issues/881
 }
