--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 }
 
 group = "org.embulk"
-version = "0.2.0-SNAPSHOT"
+version = "0.2.0"
 description = "CSV utility for Embulk plugins."
 
 sourceCompatibility = 1.8
