--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,6 @@ group = "org.embulk"
 version = "0.2.1-SNAPSHOT"
 description = "CSV utility for Embulk plugins."
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
-
 configurations {
     compileClasspath.resolutionStrategy.activateDependencyLocking()
     runtimeClasspath.resolutionStrategy.activateDependencyLocking()
@@ -27,6 +24,10 @@ tasks.withType(JavaCompile) {
 }
 
 java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+
     withJavadocJar()
     withSourcesJar()
 }
