--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,6 +5,8 @@ embulk-core = "0.10.44"
 embulk-util-file = "0.1.3"
 embulk-util-text = "0.1.1"
 
+checkstyle = "9.3"
+
 [libraries]
 junit4 = { group = "junit", name = "junit", version.ref = "junit4" }
 embulk-spi = { group = "org.embulk", name = "embulk-spi", version.ref = "embulk-spi" }
